feat: jvm